--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"6039bf36","api_key":"3ba662ec74d6451a4359b33d681e753100ef54ff9a03d44f"}
+{"app_id":"6039bf36","api_key":"3ba662ec74d6451a4359b33d681e753100ef54ff9a03d44f","gcm_key":"470695621068","dev_push":true}
