--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-console",
     "ionic-plugin-keyboard",
-    "cordova-plugin-whitelist"
+    "cordova-plugin-whitelist",
+    "phonegap-plugin-push"
   ],
   "cordovaPlatforms": []
 }
